--- a/house-price-prediction.ipynb
+++ b/house-price-prediction.ipynb
@@ -1184,7 +1184,7 @@
    "id": "5a9df920-acae-4bd5-8cb6-3a330a147661",
    "metadata": {},
    "source": [
-    "Rgularization is a method to add a little bias to the model and reducing variane (Bias-Variance Tradeoff) by setting penalty for the weights so that they will be kept low during gradient descent iteration.\\\n",
+    "Rgularization is a method to add a little bias to the model and reduce variance (Bias-Variance Tradeoff) by setting penalty for the weights so that they will be kept low during gradient descent iteration.\\\n",
     "In lasso, less relevant weights usually become zero but in Ridge they rarely reach 0.\n"
    ]
   },
